--- a/front-end-dev-book/ottergram/index.html
+++ b/front-end-dev-book/ottergram/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,41 +10,84 @@
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
-    <header>
+    <header class="main-header">
         <h1 class="logo-text">ottergram</h1>
     </header>
-    <ul class="thumbnail-list">
-        <li class="thumbnail-item">
-            <a href="#">
-                <img class="thumbnail-image" src="img/otter1.jpg" alt="Barry the Otter">
-                <span class="thumbnail-title">Barry</span>
-            </a>
-        </li>
-        <li class="thumbnail-item">
-            <a href="#">
-                <img class="thumbnail-image" src="img/otter2.jpg" alt="Robin the Otter">
-                <span class="thumbnail-title">Robin</span>
-            </a>
-        </li>
-        <li class="thumbnail-item">
-            <a href="#">
-                <img class="thumbnail-image" src="img/otter3.jpg" alt="Maurice the Otter">
-                <span class="thumbnail-title">Maurice</span>
-            </a>
-        </li>
-        <li class="thumbnail-item">
-            <a href="#">
-                <img class="thumbnail-image" src="img/otter4.jpg" alt="Lesley the Otter">
-                <span class="thumbnail-title">Lesley</span>
-            </a>
-        </li>
-        <li class="thumbnail-item">
-            <a src="#">
-                <img class="thumbnail-image" src="img/otter5.jpg" alt="Barbara the Otter">
-                <span class="thumbnail-title">Barbara</span>
-            </a>
-        </li>
-    </ul>
+    <main class="main-content">
+        <ul class="thumbnail-list">
+            <li class="thumbnail-item">
+                <a href="#">
+                    <img class="thumbnail-image" src="img/otter1.jpg" alt="Barry the Otter">
+                    <span class="thumbnail-title">Barry</span>
+                </a>
+            </li>
+            <li class="thumbnail-item">
+                <a href="#">
+                    <img class="thumbnail-image" src="img/otter2.jpg" alt="Robin the Otter">
+                    <span class="thumbnail-title">Robin</span>
+                </a>
+            </li>
+            <li class="thumbnail-item">
+                <a href="#">
+                    <img class="thumbnail-image" src="img/otter3.jpg" alt="Maurice the Otter">
+                    <span class="thumbnail-title">Maurice</span>
+                </a>
+            </li>
+            <li class="thumbnail-item">
+                <a href="#">
+                    <img class="thumbnail-image" src="img/otter4.jpg" alt="Lesley the Otter">
+                    <span class="thumbnail-title">Lesley</span>
+                </a>
+            </li>
+            <li class="thumbnail-item">
+                <a src="#">
+                    <img class="thumbnail-image" src="img/otter5.jpg" alt="Barbara the Otter">
+                    <span class="thumbnail-title">Barbara</span>
+                </a>
+            </li>
+            <li class="thumbnail-item">
+                <a href="#">
+                    <img class="thumbnail-image" src="img/otter1.jpg" alt="Barry the Otter">
+                    <span class="thumbnail-title">Barry</span>
+                </a>
+            </li>
+            <li class="thumbnail-item">
+                <a href="#">
+                    <img class="thumbnail-image" src="img/otter2.jpg" alt="Robin the Otter">
+                    <span class="thumbnail-title">Robin</span>
+                </a>
+            </li>
+            <li class="thumbnail-item">
+                <a href="#">
+                    <img class="thumbnail-image" src="img/otter3.jpg" alt="Maurice the Otter">
+                    <span class="thumbnail-title">Maurice</span>
+                </a>
+            </li>
+            <li class="thumbnail-item">
+                <a href="#">
+                    <img class="thumbnail-image" src="img/otter4.jpg" alt="Lesley the Otter">
+                    <span class="thumbnail-title">Lesley</span>
+                </a>
+            </li>
+            <li class="thumbnail-item">
+                <a src="#">
+                    <img class="thumbnail-image" src="img/otter5.jpg" alt="Barbara the Otter">
+                    <span class="thumbnail-title">Barbara</span>
+                </a>
+            </li>
+        </ul>
+        <!-- Main image -->
+        <div class="detail-image-container">
+            <div class="detail-image-frame">
+                <a href="#">
+                    <img class="detail-image" src="img/otter1.jpg" alt="">
+                    <span class="detail-image-title">Stayin' Alive</span>
+                </a>
+            </div>
+        </div>
+    </main>
 </body>
+
 </html>
