--- a/ottergram-hg-layout/index.html
+++ b/ottergram-hg-layout/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 
-<body>
+<body class="site">
     <header class="main-header">
         <h1 class="logo-text">ottergram</h1>
     </header>
@@ -87,7 +87,72 @@
                 </a>
             </div>
         </div>
+        <ul class="rhs-list">
+                <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/otter1.jpg" alt="Barry the Otter">
+                        <span class="thumbnail-title">Barry</span>
+                    </a>
+                </li>
+                <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/otter2.jpg" alt="Robin the Otter">
+                        <span class="thumbnail-title">Robin</span>
+                    </a>
+                </li>
+                <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/otter3.jpg" alt="Maurice the Otter">
+                        <span class="thumbnail-title">Maurice</span>
+                    </a>
+                </li>
+                <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/otter4.jpg" alt="Lesley the Otter">
+                        <span class="thumbnail-title">Lesley</span>
+                    </a>
+                </li>
+                <li class="thumbnail-item">
+                    <a src="#">
+                        <img class="thumbnail-image" src="img/otter5.jpg" alt="Barbara the Otter">
+                        <span class="thumbnail-title">Barbara</span>
+                    </a>
+                </li>
+                <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/otter1.jpg" alt="Barry the Otter">
+                        <span class="thumbnail-title">Barry</span>
+                    </a>
+                </li>
+                <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/otter2.jpg" alt="Robin the Otter">
+                        <span class="thumbnail-title">Robin</span>
+                    </a>
+                </li>
+                <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/otter3.jpg" alt="Maurice the Otter">
+                        <span class="thumbnail-title">Maurice</span>
+                    </a>
+                </li>
+                <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/otter4.jpg" alt="Lesley the Otter">
+                        <span class="thumbnail-title">Lesley</span>
+                    </a>
+                </li>
+                <li class="thumbnail-item">
+                    <a src="#">
+                        <img class="thumbnail-image" src="img/otter5.jpg" alt="Barbara the Otter">
+                        <span class="thumbnail-title">Barbara</span>
+                    </a>
+                </li>
+            </ul>       
     </main>
+    <footer>
+        <h1>Footer</h1>
+    </footer>
 </body>
 
 </html>
