--- a/front-end-dev-book/ottergram/index.html
+++ b/front-end-dev-book/ottergram/index.html
@@ -19,61 +19,61 @@
         <ul class="thumbnail-list">
             <li class="thumbnail-item">
                 <a href="#">
-                    <img class="thumbnail-image" src="img/otter1.jpg" alt="Barry the Otter">
+                    <img class="thumbnail-image" data-image-role="trigger" data-image-title="Hello I'm an Otter" src="img/otter1.jpg" alt="Barry the Otter">
                     <span class="thumbnail-title">Barry</span>
                 </a>
             </li>
             <li class="thumbnail-item">
                 <a href="#">
-                    <img class="thumbnail-image" src="img/otter2.jpg" alt="Robin the Otter">
+                    <img class="thumbnail-image" data-image-role="trigger" data-image-title="More Otter" src="img/otter2.jpg" alt="Robin the Otter">
                     <span class="thumbnail-title">Robin</span>
                 </a>
             </li>
             <li class="thumbnail-item">
                 <a href="#">
-                    <img class="thumbnail-image" src="img/otter3.jpg" alt="Maurice the Otter">
+                    <img class="thumbnail-image" data-image-role="trigger" data-image-title="Another Otter" src="img/otter3.jpg" alt="Maurice the Otter">
                     <span class="thumbnail-title">Maurice</span>
                 </a>
             </li>
             <li class="thumbnail-item">
                 <a href="#">
-                    <img class="thumbnail-image" src="img/otter4.jpg" alt="Lesley the Otter">
+                    <img class="thumbnail-image" data-image-role="trigger" data-image-title="OTTTTERS" src="img/otter4.jpg" alt="Lesley the Otter">
                     <span class="thumbnail-title">Lesley</span>
                 </a>
             </li>
             <li class="thumbnail-item">
                 <a src="#">
-                    <img class="thumbnail-image" src="img/otter5.jpg" alt="Barbara the Otter">
+                    <img class="thumbnail-image" data-image-role="trigger" data-image-title="Tool" src="img/otter5.jpg" alt="Barbara the Otter">
                     <span class="thumbnail-title">Barbara</span>
                 </a>
             </li>
             <li class="thumbnail-item">
                 <a href="#">
-                    <img class="thumbnail-image" src="img/otter1.jpg" alt="Barry the Otter">
+                    <img class="thumbnail-image" data-image-role="trigger" data-image-title="A Perfect Circle" src="img/otter1.jpg" alt="Barry the Otter">
                     <span class="thumbnail-title">Barry</span>
                 </a>
             </li>
             <li class="thumbnail-item">
                 <a href="#">
-                    <img class="thumbnail-image" src="img/otter2.jpg" alt="Robin the Otter">
+                    <img class="thumbnail-image" data-image-role="trigger" data-image-title="Puscifier" src="img/otter2.jpg" alt="Robin the Otter">
                     <span class="thumbnail-title">Robin</span>
                 </a>
             </li>
             <li class="thumbnail-item">
                 <a href="#">
-                    <img class="thumbnail-image" src="img/otter3.jpg" alt="Maurice the Otter">
+                    <img class="thumbnail-image" data-image-role="trigger" data-image-title="Metallica" src="img/otter3.jpg" alt="Maurice the Otter">
                     <span class="thumbnail-title">Maurice</span>
                 </a>
             </li>
             <li class="thumbnail-item">
                 <a href="#">
-                    <img class="thumbnail-image" src="img/otter4.jpg" alt="Lesley the Otter">
+                    <img class="thumbnail-image" data-image-role="trigger"  data-image-title="Led Zepplin" src="img/otter4.jpg" alt="Lesley the Otter">
                     <span class="thumbnail-title">Lesley</span>
                 </a>
             </li>
             <li class="thumbnail-item">
                 <a src="#">
-                    <img class="thumbnail-image" src="img/otter5.jpg" alt="Barbara the Otter">
+                    <img class="thumbnail-image" data-image-role="trigger"  data-image-title="Nine Inch Nails" src="img/otter5.jpg" alt="Barbara the Otter">
                     <span class="thumbnail-title">Barbara</span>
                 </a>
             </li>
@@ -82,12 +82,12 @@
         <div class="detail-image-container">
             <div class="detail-image-frame">
                 <a href="#">
-                    <img class="detail-image" src="img/otter1.jpg" alt="">
-                    <span class="detail-image-title">Stayin' Alive</span>
+                    <img class="detail-image" data-image-role="target" src="img/otter1.jpg" alt="">
+                    <span class="detail-image-title" data-image-role= "title">Stayin' Alive</span>
                 </a>
             </div>
         </div>
     </main>
 </body>
-
+<script type="text/javascript" src="scripts/main.js"></script>
 </html>
