--- a/front-end-dev-book/ottergram/index.html
+++ b/front-end-dev-book/ottergram/index.html
@@ -80,7 +80,7 @@
         </ul>
         <!-- Main image -->
         <div class="detail-image-container">
-            <div class="detail-image-frame">
+            <div class="detail-image-frame" data-image-role="frame">
                 <a href="#">
                     <img class="detail-image" data-image-role="target" src="img/otter1.jpg" alt="">
                     <span class="detail-image-title" data-image-role= "title">Stayin' Alive</span>
